@@ -1549,7 +1549,7 @@
 		if(count($delay_flex_el)==0)
 			array_push($delay_flex_el, S_NO_FLEXIBLE_INTERVALS);
 		else
-			array_push($delay_flex_el, new CButton('del_delay_flex','delete selected'));
+			array_push($delay_flex_el, new CButton('del_delay_flex',S_DELETE_SELECTED));
 
 		if(count($applications)==0)  array_push($applications,0);
 
@@ -1927,7 +1927,7 @@
 		if(count($delay_flex_el)==0)
 			array_push($delay_flex_el, "No flexible intervals");
 		else
-			array_push($delay_flex_el, new CButton('del_delay_flex','delete selected'));
+			array_push($delay_flex_el, new CButton('del_delay_flex',S_DELETE_SELECTED));
 
 		if(count($applications)==0)  array_push($applications,0);
 
@@ -2175,7 +2175,7 @@
 		if(count($dep_el)==0)
 			$dep_el[] = S_NO_DEPENDENCES_DEFINED;
 		else
-			$dep_el[] = new CButton('del_dependence','delete selected');
+			$dep_el[] = new CButton('del_dependence',S_DELETE_SELECTED);
 
 //		$frmMTrig->AddRow(S_THE_TRIGGER_DEPENDS_ON,$dep_el);
 /* end dependencies */
@@ -2285,7 +2285,7 @@
 		if(count($dep_el)==0)
 			array_push($dep_el,  S_NO_DEPENDENCES_DEFINED);
 		else
-			array_push($dep_el, new CButton('del_dependence','delete selected'));
+			array_push($dep_el, new CButton('del_dependence',S_DELETE_SELECTED));
 		$frmTrig->AddRow(S_THE_TRIGGER_DEPENDS_ON,$dep_el);
 	/* end dependencies */
 
@@ -2812,7 +2812,7 @@
 		if(count($valuemap_el)==0)
 			array_push($valuemap_el, S_NO_MAPPING_DEFINED);
 		else
-			array_push($valuemap_el, new CButton('del_map','delete selected'));
+			array_push($valuemap_el, new CButton('del_map',S_DELETE_SELECTED));
 
 		$frmValmap->AddRow(S_MAPPING, $valuemap_el);
 		$frmValmap->AddRow(S_NEW_MAPPING, array(
